# cairn

./: Cargo.toml  README.md  SPEC.md  index.html
crates/extract/: Cargo.toml
crates/extract/src/: lib.rs
crates/forget/: Cargo.toml
crates/forget/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
crates/traverse/: Cargo.toml
crates/traverse/src/: lib.rs
tests/: integration.rs
