[package]
name = "cairn"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "local-first memory for AI agents. temporal knowledge store in one sqlite file."

[[bin]]
name = "cairn"
path = "bin/cairn/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
cairn-store = { path = "crates/store" }
cairn-mcp = { path = "crates/mcp" }
cairn-query = { path = "crates/query" }
cairn-traverse = { path = "crates/traverse" }
cairn-forget = { path = "crates/forget" }
cairn-extract = { path = "crates/extract" }
cairn-sync = { path = "crates/sync" }

[workspace]
members = [
    "crates/store",
    "crates/traverse",
    "crates/forget",
    "crates/query",
    "crates/extract",
    "crates/sync",
    "crates/mcp",
]

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
